--- a/templates/layout.html
+++ b/templates/layout.html
@@ -20,7 +20,7 @@
       <nav>
         <ul>
           <li><a href="/" title="Home"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
-          <li><a href="https://github.com/lijiansong" title="GitHub Projects"><i class="fa fa-github" aria-hidden="true"></i> Project</a></li>
+          <li><a href="https://github.com/lijiansong" title="GitHub Projects"><i class="fa fa-github" aria-hidden="true"></i> Projects</a></li>
           <li><a href="/tags/" title="Tags"><i class="fa fa-tags" aria-hidden="true"></i> Tags</a></li>
           <li><a href="/archives/" title="Archives"><i class="fa fa-list" aria-hidden="true"></i> Archives</a></li>
           <li><button title="Change theme"
