--- a/templates/layout.html
+++ b/templates/layout.html
@@ -25,7 +25,7 @@
           <li><a href="/archives/" title="Archives"><i class="fa fa-list" aria-hidden="true"></i> Archives</a></li>
           <li><button title="Change theme"
                       style="border: none; background:none;"
-                      onclick="toggleTheme();"><i class="fa fa-adjust" aria-hidden="true"></i></button></li>
+                      onclick="toggleTheme();"><i class="fa fa-toggle-on" aria-hidden="true"></i></button></li>
         </ul>
       </nav>
 
