clustrmaps visitor tracker

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -51,6 +51,7 @@
           -
           <a href="mailto:lijiansong AT ict DOT ac DOT cn?subject=[Comment for http://github.com/lijiansong{{ page.href | urlencode }}]">Q & A</a>
         </small></p>
+        <p><a href="https://clustrmaps.com/site/1awiv" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=Ltyrv3bGQf5SP0x59hWuX6ZBmvpcbxjSrRjLMs2V7lE&cl=ffffff"></a> </p>
       </footer>
 
     <script src="/js/main.js"></script>
