comment out flagcounter

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -52,6 +52,7 @@
           <a href="mailto:lijiansong AT ict DOT ac DOT cn?subject=[Comment for http://github.com/lijiansong{{ page.href | urlencode }}]">Q & A</a>
         </small></p>
         <p><a href="https://clustrmaps.com/site/1awiv" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=Ltyrv3bGQf5SP0x59hWuX6ZBmvpcbxjSrRjLMs2V7lE&cl=ffffff"></a> </p>
+        <!-- <p><a href="https://info.flagcounter.com/2orw"><img src="https://s01.flagcounter.com/count2/2orw/bg_FFFFFF/txt_000000/border_CCCCCC/columns_2/maxflags_10/viewers_0/labels_0/pageviews_0/flags_0/percent_0/" alt="Flag Counter" border="0"></a></p> -->
       </footer>
 
     <script src="/js/main.js"></script>
